changes for levi

--- a/site/css/custom.less
+++ b/site/css/custom.less
@@ -1,6 +1,6 @@
 @import "elements.less";
 
-body { background: url('../img/paper.png'); padding-bottom: 500px; }
+body { background: url('../img/paper.png'); padding: 175px 0; }
 
 #timeline_container {
     position: relative;
@@ -25,11 +25,12 @@ body { background: url('../img/paper.png'); padding-bottom: 500px; }
 
 .timeline_entry {
     position: relative;
-    padding: 150px 0;
+    padding: 120px 0;
     font-family: "Times New Roman", san-serif;
-    font-size: 24px;
+    font-size: 26px;
+    color: #694B3D;
 }
-.timeline_year_and_junk { display: none; }
+.timeline_year_and_junk { position: absolute; width: 100%; display: none; }
 .year { position: absolute; left: 30%; }
 .year_number { position: absolute; right: 28%; }
 .year_bar { display: block; margin: 10px auto 0 auto; }
