--- a/site/css/custom.css
+++ b/site/css/custom.css
@@ -6,7 +6,7 @@
   ---------------------------------------------------*/
 body {
   background: url('../img/paper.png');
-  padding-bottom: 500px;
+  padding: 175px 0;
 }
 #timeline_container {
   position: relative;
@@ -35,11 +35,14 @@ body {
 }
 .timeline_entry {
   position: relative;
-  padding: 150px 0;
+  padding: 120px 0;
   font-family: "Times New Roman", san-serif;
-  font-size: 24px;
+  font-size: 26px;
+  color: #694B3D;
 }
 .timeline_year_and_junk {
+  position: absolute;
+  width: 100%;
   display: none;
 }
 .year {
