--- a/site/css/custom.less
+++ b/site/css/custom.less
@@ -49,12 +49,15 @@ body {
 #timeline_container {
     position: relative;
     background: url('../img/timeline.png') 50% 50% repeat-y;
-    padding-bottom: 20px;
+    padding-bottom: 110px;
 }
 
 #great_moments_in_history { margin-left: 14px; }
 
-#bottom_ornament { margin-top: -15px; margin-left: -3px; }
+#bottom_ornament {
+    margin-top: -15px;
+    margin-left: -2px;
+}
 
 #down_pointer {
     z-index: 5;
@@ -93,7 +96,11 @@ body {
     padding-right: 20px;
     margin-top: -10px;
 
+    .timeline_dots {}
     .timeline_green_dot { position: absolute; left: 98.65%; margin-top: -23px; }
+}
+.left_box {
+    margin-right: 50px;
 }
 .right_text {
     position: absolute;
@@ -111,6 +118,8 @@ body {
  * Footer
  */
 #stuart_advertising_offices { padding-bottom: 100px; }
+
+
 #what_stuart_does {
     padding: 50px 0 0 0;
     list-style-type: none;
@@ -120,8 +129,39 @@ body {
         color: #694B3D;
         font: 30px/47px "Bolton Sans";
         letter-spacing: -1px;
+
+        a {
+            color: #7A5226;
+        }
     }
 }
+
+#top_menu {
+    z-index: 10;
+    padding: 20px 0;
+
+    ul {
+        list-style-type: none;
+        text-align: center;
+
+        display: inline-block;
+
+        li {
+            margin-right: 30px;
+            float: left;
+            position: relative;
+            line-height: 57px;
+            color: #694B3D;
+            font: 30px/47px "Bolton Sans";
+            letter-spacing: -1px;
+
+            a {
+                color: #7A5226;
+            }
+        }
+    }
+}
+
 
 #stuart_phone_number {
     font-family: "Times New Roman", sans-serif;
@@ -143,4 +183,31 @@ body {
     .year_number { height: 20px; right: 15%; }
 
     .timeline_dots { display: none; }
+}
+
+
+/*
+ * About page
+ */
+.about-page {
+    .row {
+        padding-bottom: 30px;
+
+        img {
+            border: 5px solid #977E66;
+        }
+    }
+
+    .main-about {
+        p {
+            font-size: 14px;
+        }
+    }
+}
+
+/*
+ * Contact us
+ */
+.contact-us-map {
+    border: 5px solid rgba(63, 57, 27, 0.5);
 }
