--- a/site/css/custom.css
+++ b/site/css/custom.css
@@ -4,6 +4,9 @@
     A set of useful LESS mixins
     More info at: http://lesselements.com
   ---------------------------------------------------*/
+html {
+  overflow: hidden;
+}
 body {
   position: relative;
   background: url('../img/paper.png');
@@ -103,6 +106,16 @@ body {
   font-size: 26px;
   color: #694B3D;
 }
+@media only screen and (max-width: 1000px) {
+  .timeline_entry {
+    font-size: 18px;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .timeline_entry {
+    font-size: 15px;
+  }
+}
 .timeline_year_and_junk {
   position: absolute;
   width: 100%;
@@ -131,7 +144,7 @@ body {
 }
 .left_text {
   position: absolute;
-  left: 0%;
+  left: -2px;
   width: 50%;
   text-align: right;
   padding-right: 20px;
@@ -144,7 +157,7 @@ body {
 }
 .right_text {
   position: absolute;
-  right: 0%;
+  right: -1px;
   width: 50%;
   text-align: left;
   text-justify: inter-word;
@@ -185,6 +198,12 @@ body {
   text-align: center;
   display: inline-block;
 }
+@media only screen and (max-width: 510px) {
+  #top_menu ul {
+    padding: 0;
+    width: 100%;
+  }
+}
 #top_menu ul li {
   margin-right: 30px;
   float: left;
@@ -196,6 +215,22 @@ body {
 }
 #top_menu ul li a {
   color: #7A5226;
+}
+@media only screen and (max-width: 610px) {
+  #top_menu ul li {
+    font: 24px "Bolton Sans";
+  }
+}
+@media only screen and (max-width: 510px) {
+  #top_menu ul li {
+    font: 24px "Bolton Sans";
+    float: none;
+    margin-bottom: 1px;
+    padding: 10px 0;
+    background-color: rgba(0, 0, 0, 0.1);
+    display: block;
+    width: 100%;
+  }
 }
 #stuart_phone_number {
   font-family: "Times New Roman", sans-serif;
@@ -211,14 +246,23 @@ body {
 /*
  * Mobile
  */
+@media only screen and (max-width: 800px) {
+  .year {
+    left: 20%;
+  }
+  #down_pointer {
+    display: none;
+  }
+}
+@media only screen and (max-width: 700px) {
+  #stuart_advertising_offices {
+    width: 500px;
+  }
+}
 @media only screen and (max-width: 535px) {
   #great_moments_in_history {
     margin-left: 5px;
     width: 100%;
-  }
-  #down_pointer {
-    width: 75px;
-    right: 10px;
   }
   .year {
     height: 20px;
@@ -233,6 +277,26 @@ body {
   }
   .timeline_dots {
     display: none;
+  }
+  #logo {
+    width: 400px;
+  }
+  #stuart_advertising_offices {
+    width: 450px;
+  }
+  #tv_entry {
+    margin-top: 130px !important;
+  }
+}
+@media only screen and (max-width: 420px) {
+  .year {
+    left: 10%;
+  }
+  #logo {
+    width: 300px;
+  }
+  #stuart_advertising_offices {
+    width: 300px;
   }
 }
 /*
