--- a/site/css/custom.less
+++ b/site/css/custom.less
@@ -9,6 +9,10 @@
 	background: radial-gradient(ellipse at @xpos @ypos @ypos,  rgba(0,0,0,0) 0%,rgba(0,0,0,0) @stop,rgba(0,0,0,0.6) 100%); /* W3C */
 }
 
+html {
+    overflow: hidden;
+}
+
 body {
 	position: relative;
     background: url('../img/paper.png');
@@ -71,6 +75,7 @@ body {
     .transition-duration(0.2s)
 }
 
+
 /*
  * Timeline entry
  */
@@ -81,6 +86,14 @@ body {
     font-family: "bolton_sansregular", san-serif;
     font-size: 26px;
     color: #694B3D;
+
+    @media only screen and (max-width: 1000px) {
+        font-size: 18px;
+    }
+
+    @media only screen and (max-width: 400px) {
+        font-size: 15px;
+    }
 }
 .timeline_year_and_junk { position: absolute; width: 100%; display: none; }
 .year { position: absolute; left: 30%; }
@@ -90,7 +103,7 @@ body {
 .dots { display: inline-block; visibility: hidden; }
 .left_text {
     position: absolute;
-    left: 0%;
+    left: -2px;
     width: 50%;
     text-align: right;
     padding-right: 20px;
@@ -100,7 +113,7 @@ body {
 }
 .right_text {
     position: absolute;
-    right: 0%;
+    right: -1px;
     width: 50%;
     text-align: left;
     text-justify: inter-word;
@@ -113,7 +126,9 @@ body {
 /*
  * Footer
  */
-#stuart_advertising_offices { padding-bottom: 100px; }
+#stuart_advertising_offices {
+    padding-bottom: 100px;
+}
 
 
 #what_stuart_does {
@@ -139,8 +154,11 @@ body {
     ul {
         list-style-type: none;
         text-align: center;
-
         display: inline-block;
+        @media only screen and (max-width : 510px) {
+            padding: 0;
+            width: 100%;
+        }
 
         li {
             margin-right: 30px;
@@ -153,6 +171,19 @@ body {
 
             a {
                 color: #7A5226;
+            }
+            @media only screen and (max-width : 610px) {
+                font: 24px "Bolton Sans";
+            }
+
+            @media only screen and (max-width : 510px) {
+                font: 24px "Bolton Sans";
+                float: none;
+                margin-bottom: 1px;
+                padding: 10px 0;
+                background-color: rgba(0, 0, 0, 0.1);
+                display: block;
+                width: 100%;
             }
         }
     }
@@ -169,17 +200,55 @@ body {
 /*
  * Mobile
  */
+@media only screen and (max-width: 800px) {
+    .year {
+        left: 20%;
+    }
+    #down_pointer {
+        display: none;
+    }
+}
+@media only screen and (max-width: 700px) {
+    #stuart_advertising_offices {
+        width: 500px;
+    }
+}
 @media only screen and (max-width: 535px) {
     #great_moments_in_history { margin-left: 5px; width: 100%; }
-
-    #down_pointer { width: 75px; right: 10px; }
 
     .year { height: 20px; left: 20%; }
     .year_bar { width: 40px; }
     .year_number { height: 20px; right: 15%; }
 
     .timeline_dots { display: none; }
+
+    #logo {
+        width: 400px;
+    }
+    #stuart_advertising_offices {
+        width: 450px;
+    }
+
+    #tv_entry {
+        margin-top: 130px !important;
+        .right_text {
+            //margin-top:
+        }
+    }
 }
+@media only screen and (max-width: 420px) {
+    .year {
+        left: 10%;
+    }
+
+    #logo {
+        width: 300px;
+    }
+    #stuart_advertising_offices {
+        width: 300px;
+    }
+}
+
 
 
 /*
