--- a/site/css/custom.less
+++ b/site/css/custom.less
@@ -256,10 +256,18 @@ body {
  */
 .about-page {
     .row {
-        padding-bottom: 30px;
+        padding-bottom: 60px;
+
+        h3 { margin-top: 0; }
 
         img {
             border: 5px solid #977E66;
+        }
+
+        .big-about-image {
+            display: block;
+            float: left;
+            margin-right: 20px;
         }
     }
 
